[metadata]
name = super_resolution_pkg
version = 0.0.1
author = Jiyao Weng
author_email = w.j@live.ca
description = A package for upscaling images and videos using Real-ESRGAN.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your-username/your-repo-name
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    basicsr
    realesrgan
    opencv-python
    torch
    numpy
    torchvision

[options.entry_points]
console_scripts =
    super-resolution = super_resolution_pkg.super_resolution:main
